Add updates and deletes to story.

--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -1,3 +1,8 @@
 Title: <%= @story.title %>
 <p>By <%= @story.writer.username %></p>
 <p>Description: <%= @story.description %></p>
+<p>Share Work? <%= @story.share_work %></p>
+<p>
+  <%= link_to ('Update Story'), { controller: 'stories', action: 'edit'}, method: :get %> |
+  <%= link_to ('Delete Story'), { controller: 'stories', action: 'destroy'}, method: :delete %>
+</p>
