Update controllers so a user who is not signed in does not get access to certain view and edit features, especially if the work is hidden

--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -2,7 +2,13 @@ Title: <%= @story.title %>
 <p>By <%= @story.writer.username %></p>
 <p>Description: <%= @story.description %></p>
 <p>Share Work? <%= @story.share_work %></p>
+
+<% if @story.writer == current_writer %>
+  <p>
+    <%= link_to ('Update Story'), { controller: 'stories', action: 'edit'}, method: :get %> |
+    <%= link_to ('Delete Story'), { controller: 'stories', action: 'destroy'}, method: :delete %>
+  </p>
+<% end %>
 <p>
-  <%= link_to ('Update Story'), { controller: 'stories', action: 'edit'}, method: :get %> |
-  <%= link_to ('Delete Story'), { controller: 'stories', action: 'destroy'}, method: :delete %>
+  <%= link_to ('Return') , writer_path(@story.writer) %>
 </p>
