Revise site description

--- a/app/views/writers/index.html.erb
+++ b/app/views/writers/index.html.erb
@@ -1,7 +1,7 @@
 <div class="purpose">
   <h2>Overview</h2>
   <p>This site is currently in alpha as part of a portfolio. Feel free to create stories as you see fit!
-    If you sign up for an account, emails may be sent from time to time on changes that can affect the site.</p>
+    View this site for more news soon!</p>
 </div>
 
 <div class="pie">
