--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -1,10 +1,24 @@
-<h1>New Story Form</h1>
+<h3 class="text-center">New Story Form</h3>
 <%= form_for @story, url: { action: 'create' } do |f| %>
-  <div><label for="title">Title</label></div>
-  <%= f.text_field :title %>
-  <div><label for="description">Description</label></div>
-  <div><%= f.text_area :description %></div>
-  <label for="share_work">Share Work</label>
-  <div><%= f.check_box :share_work %></div>
-  <div><%= submit_tag('Submit') %></div>
+  <div class='form-group text-center'>
+    <label for="title">Title</label>
+  </div>
+  <div class="text-center">
+    <%= f.text_field :title, {size: 100}%>
+  </div>
+  <div class='form-group text-center'>
+    <label for="description">Description</label>
+  </div>
+  <div class='form-group text-center'>
+    <%= f.text_area :description, {rows: '15', cols: 100} %>
+  </div>
+  <div class='text-center'>
+    Share Work
+  </div>
+  <div class='form-group text-center'>
+    <%= f.check_box :share_work %>
+  </div>
+  <div class='form-group text-center'>
+    <%= submit_tag('Submit') %>
+  </div>
 <% end %>
