--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   </head>
   <body>
-    <div><h1>Author Narrative</h1>
+    <div><h1 class="font-italic font-weight-light text-center">Author Narrative</h1>
       <ul class="nav justify-content-center">
         <% if writer_signed_in? %>
           <li class="nav-item"><%= link_to ('Home') , writers_path, { class: "nav-link active" }  %></li>
