--- a/app/views/writers/index.html.erb
+++ b/app/views/writers/index.html.erb
@@ -1,40 +1,43 @@
-<h2>Platform for Writers [in Development]</h2>
-<p style="padding-left: 10px">For writers who like to plan, with an analytical twist.</p>
-<p style="padding-left: 10px">This is a portfolio piece in development.</p>
+<div class="card w-60 bg-light mb-3 text-center">
+  <div class="card-body">
+    <h3 class="card-title font-weight-light">Platform for Writers</h3>
+    <p class="card-text font-weight-light">For writers who like to plan, with a slight analytical twist.</p>
+    <p class="card-text font-weight-light">This is a portfolio piece in active development.</p>
+  </div>
+</div>
 <div class="card-group">
   <div class="card w-60 bg-light mb-3 text-center">
     <div class="card-body">
-      <h3 class="card-title">Current Story Visibility</h3>
+      <h4 class="card-title">Current Story Visibility</h4>
       <%= pie_chart @public_private_stories_pie, library: {animation: { duration: 3000, easing: 'easeOutCirc'}} %>
-      <p class="card-text">Writers can create and plan their story private, then share them when ready.</p>
+      <p class="card-text">Writers can create and plan their story privately, then share them when ready.</p>
     </div>
   </div>
   <div class="card w-60 bg-light mb-3 text-center">
     <div class="card-body">
-      <h3 class="card-title">Usage</h3>
+      <h4 class="card-title">Usage</h4>
       <p class="card-text"><%= @total_stories %> Stories</p>
       <p class="card-text"><%= @total_writers %> Writers</p>
+      <h4 class="card-title">Upcoming Features</h4>
+      <p class="card-text"><li style="padding-left: 10px">Characters</li></p>
+      <p class="card-text"><li style="padding-left: 10px">Events</li></p>
+      <p class="card-text"><li style="padding-left: 10px">Timelines</li></p>
+      <h4 class="card-title">Tech Stack</h4>
+      <p class="card-text">PostgreSQL | Ruby on Rails</p>
+      <p><a href="https://github.com/wantsui/">GitHub Profile</a></p>
     </div>
   </div>
   <div class="card w-60 bg-light mb-3 text-center">
     <div class="card-body">
-      <h3 class="card-title">Featured Writer</h3>
-      <p class="card-text">Username: <%= @writer.username %></p>
-      <p class="card-text">Bio: <%= @writer.bio %></p>
+      <h4 class="card-title">Featured Writer</h4>
+      <p class="card-text font-weight-bold">Username:</p>
+      <p class="card-text"><%= @writer.username %></p>
+      <p class="card-text font-weight-bold">Bio:</p>
+      <p class="card-text"><%= @writer.bio %></p>
+      <p class="card-text font-weight-bold">Writing about..</p>
+      <p class="card-text"><%= @writer.stories.last.title %></p>
       <p class="card-text">View <%= link_to (@writer.username) , writer_path(@writer) %>'s profle!
       </p>
     </div>
   </div>
-</div>
-
-<div class="future_updates">
-  <h4>Upcoming Features</h4>
-  <li style="padding-left: 10px">Characters</li>
-  <li style="padding-left: 10px">Events</li>
-  <li style="padding-left: 10px">Timelines</li>
-</div>
-
-<div style="padding-left: 10px" class="tech_stack">
-  <p>Tech Stack: PostgreSQL | Ruby on Rails</p>
-  <p><a href="https://github.com/wantsui/author-narrative">Visit GitHub Page</a></p>
 </div>
