Update main page description.

--- a/app/views/writers/index.html.erb
+++ b/app/views/writers/index.html.erb
@@ -2,7 +2,7 @@
   <div class="card-body">
     <h3 class="card-title font-weight-light">Platform for Writers</h3>
     <p class="card-text font-weight-light">For writers who like to plan, with a slight analytical twist.</p>
-    <p class="card-text font-weight-light">This is a portfolio piece in active development.</p>
+    <p class="card-text font-weight-light">This is a portfolio piece in active development. Check back soon more for more updates!</p>
   </div>
 </div>
 <div class="card-group">
@@ -15,14 +15,14 @@
   </div>
   <div class="card w-60 bg-light mb-3 text-center">
     <div class="card-body">
-      <h4 class="card-title">Usage</h4>
+      <h5 class="card-title">Usage</h5>
       <p class="card-text"><%= @total_stories %> Stories</p>
       <p class="card-text"><%= @total_writers %> Writers</p>
-      <h4 class="card-title">Upcoming Features</h4>
+      <h5 class="card-title">Upcoming Features</h5>
       <p class="card-text"><li style="padding-left: 10px">Characters</li></p>
       <p class="card-text"><li style="padding-left: 10px">Events</li></p>
       <p class="card-text"><li style="padding-left: 10px">Timelines</li></p>
-      <h4 class="card-title">Tech Stack</h4>
+      <h5 class="card-title">Tech Stack</h5>
       <p class="card-text">PostgreSQL | Ruby on Rails</p>
       <p><a href="https://github.com/wantsui/">GitHub Profile</a></p>
     </div>
