Update notes on readme and main page.

--- a/app/views/writers/index.html.erb
+++ b/app/views/writers/index.html.erb
@@ -23,7 +23,7 @@
       <p class="card-text"><li style="padding-left: 10px">Events</li></p>
       <p class="card-text"><li style="padding-left: 10px">Timelines</li></p>
       <h5 class="card-title">Tech Stack</h5>
-      <p class="card-text">PostgreSQL | Ruby on Rails</p>
+      <p class="card-text">PostgreSQL | Ruby on Rails | Bootstrap | Devise | Figaro | Groupdate | Chartkick </p>
       <p><a href="https://github.com/wantsui/">GitHub Profile</a></p>
     </div>
   </div>
