--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -13,6 +13,11 @@
     <% end %>
 
     <div class="field">
+      <%= f.label :username %><br />
+      <%= f.text_field :username, autocomplete: "off" %>
+    </div>
+
+    <div class="field">
       <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
       <%= f.password_field :password, autocomplete: "off" %>
       <% if @minimum_password_length %>
@@ -37,11 +42,8 @@
   <% end %>
 </div>
 
-<h3 class="text-center">Cancel my account</h3>
-<p class="text-center">Unhappy? </p>
+<h3 class="text-center">Delete my account</h3>
+<p class="text-center">Click the button below to delete it forever.</p>
 <div class="d-flex justify-content-center">
-  <%= button_to "Cancel my account", registration_path(resource_name), { data: { confirm: "Are you sure?" }, class: 'btn btn-outline-danger', method: :delete } %>
-</div>
-<div class="d-flex justify-content-center">
-  <p class="text-center"><%= link_to "Back", :back %></p>
+  <%= button_to "Delete my account", registration_path(resource_name), { data: { confirm: "Are you sure? It can't be recovered." }, class: 'btn btn-outline-danger', method: :delete } %>
 </div>
