Update the created date chart so that it shows the count of the writer's chart daily, to the latest date.

--- a/app/views/writers/show.html.erb
+++ b/app/views/writers/show.html.erb
@@ -25,7 +25,7 @@
   </div>
   <div class="card w-60 bg-light mb-3 text-center">
     <div class="card-body">
-      <h3 class="card-title">Stories By Created Date</h3>
+      <h3 class="card-title">Stories By Created Date To Date</h3>
       <%= line_chart @daily_stories_chart, library: {animation: { duration: 2000, easing: 'easeOutQuart'}} %>
     </div>
   </div>
